<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blimp_gui</name>
  <version>0.1.0</version>
  <description>ROS 2 Web GUI for OAK-D Lite camera visualization</description>
  <maintainer email="nmasurka@asu.edu">nihar</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
